@@ -24,6 +24,7 @@ wajig (2.0.50) unstable; urgency=low
   * LIST-RECOMMENDED: new command that displays packages which are
     auto-installed via Recommends, and are without installed dependencies.
     (Closes: #482147)
+  * NEWS: new command that displays package NEWS file(s).
   * Remove supression of error messages; Not a good idea.
   * Add dependency on aptitude; It must have been forgotten.
 
